results/SVCOMP/conversational/log-ExSymExeF2L-2024_03_12_15_48_47.txt
class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> res > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:15: error: cannot find symbol
    //@ ensures \result ==> res > 0;
                            ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> res > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:15: error: cannot find symbol
    //@ ensures \result ==> res > 0;
                            ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> new Main().test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            return new Main().test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> new Main().test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> new Main().test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            return new Main().test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> new Main().test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> new Main().test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            return new Main().test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> new Main().test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: non-static method test(float) cannot be referenced from a static context
    //@ ensures \result ==> test(x);
                            ^
1 error

class Main {

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> new Main().test(x);
    //@ ensures !\result ==> true;
    public static boolean f(float x) {
        if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
            return new Main().test(x);
        }
        return true;
    }

    //@ requires 0.0f <= x && x <= Long.MAX_VALUE / 2;
    //@ ensures \result ==> ((long)++x) > 0;
    //@ ensures !\result ==> false;
    public boolean test(float x) {

        long res = (long) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> new Main().test(x);
                            ^
1 error

